Error 0x80004005 NS_ERROR_FAILURE with an idn domain
Categories
(Thunderbird :: Account Manager, defect)
Tracking
(thunderbird_esr115+ fixed, thunderbird122 fixed)
People
(Reporter: l.fuerderer, Assigned: mkmelin)
References
(Regression)
Details
(Keywords: intl, regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr115+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:120.0) Gecko/20100101 Firefox/120.0
Steps to reproduce:
- Start with a completely fresh Thunderbird profile
- Choose a mail server with an idn domain name
- Setup IMAP and SMTP with "Manual configuration" using the punycode (xn--*) domain as imap server / smtp server hostname
- Click on "Re-test" (green box appears), then click on "Done".
Actual results:
I see a yellow box with the content:
Component returned failure code: 0x80004005
(NS_ERROR_FAILURE) [nsIMsgIncomingServer.verifyLogon]
Below that, it says "Checking password..." with a loading indicator that runs without ending. (I waited at least 5 minutes)
This error occurs in Thunderbird version 115.5.2 but not in 115.5.1
Expected results:
The mail account should be successfully configured, Thunderbird should change to the main screen and start loading mails.
| Assignee | ||
Comment 1•2 years ago
|
||
And if you use the real domain? (Non punycode one)
| Assignee | ||
Comment 2•2 years ago
|
||
Would likely be from bug 1857824.
But entering the host in punycode to begin with would be a bit unexpected.
| Reporter | ||
Comment 3•2 years ago
|
||
Thunderbird asks for name, mail address and password first, before I can change individual IMAP / SMTP settings.
When I enter my mail address with the hostname part in non-ascii form, Thunderbird complains right away:
"Hostname is empty or contains forbidden characters. Only letters, numbers, - and . are allowed."
When I use the punycode first for my mail address but enter the non-ascii hostname into the IMAP / SMTP hostname fields and click on Re-Test, the hostnames are automatically replaced by their punycode counterpart.
The "Done" button is grayed out until I click on Re-Test. Clicking Done after this auto-replacement results in the same Issue as described in my opening post.
| Assignee | ||
Comment 5•2 years ago
|
||
Bug 1857824 made IDN hostnames that were entered as normal text work (not break the UI), but
didn't account for accounts that were entere as punycode to begin with.
That bug normalized the hostname from the url. This normalizes the actual hostname pref as well.
Bug 1871164 has good steps to reproduce.
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/a00fee758b02
Account for hostnames that were entered as punycode. r=babolivier
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 8•2 years ago
|
||
Comment on attachment 9369844 [details]
Bug 1870720 - Account for hostnames that were entered as punycode. r=#thunderbird-reviewers
[Approval Request Comment]
Regression caused by (bug #): bug 1857824
User impact if declined: can't enter idn account
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): fairly safe, adds automated test
Comment 9•2 years ago
|
||
Comment on attachment 9369844 [details]
Bug 1870720 - Account for hostnames that were entered as punycode. r=#thunderbird-reviewers
[Triage Comment]
Approved for beta
Comment 10•2 years ago
|
||
| bugherder uplift | ||
Thunderbird 122.0b3:
https://hg.mozilla.org/releases/comm-beta/rev/1f230b9d0eb4
Comment 11•2 years ago
|
||
Comment on attachment 9369844 [details]
Bug 1870720 - Account for hostnames that were entered as punycode. r=#thunderbird-reviewers
[Triage Comment]
Approved for esr115
Comment 12•2 years ago
|
||
| bugherder uplift | ||
Thunderbird 115.7.0:
https://hg.mozilla.org/releases/comm-esr115/rev/d8a8ded00dd0
Comment 14•2 years ago
|
||
The test added in this bug does not pass on ESR. Is comm-esr115 missing something, or is mozilla-esr115 missing something?
| Assignee | ||
Comment 15•2 years ago
|
||
Bug 1880690 takes care.
Comment 16•1 year ago
|
||
I have removed a MOZ_CRASH I see with a patch in
https://phabricator.services.mozilla.com/D216180
But obviously there are other issues.
Comment 17•1 year ago
|
||
Oops, I meant the comment 16 for a different Bug 1906992.
Description
•