Bug 1870720 - Account for hostnames that were entered as punycode. r=babolivier

Bug 1857824 made IDN hostnames that were entered as normal text work (not break the UI), but
didn't account for accounts that were entere as punycode to begin with.

That bug normalized the hostname from the url. This normalizes the actual hostname pref as well.

Bug 1871164 has good steps to reproduce.

Differential Revision: https://phabricator.services.mozilla.com/D197066

--HG--
extra : rebase_source : 195b86b4cd11624d7da0618b1f15b9bbe4671411
extra : amend_source : 5b561437033b7b8d05716cbc5a1abcf71d4bfef0